--- a/controller/app/src/main/res/layout/activity_main.xml
+++ b/controller/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
         android:id="@+id/turtle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
         android:text="@string/turtle"
+        app:layout_constraintBottom_toTopOf="@+id/btnUp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -32,13 +32,12 @@
         android:id="@+id/btnUp"
         android:layout_width="129dp"
         android:layout_height="134dp"
-        android:layout_marginTop="224dp"
+        android:layout_marginBottom="-4dp"
         android:enabled="false"
-        android:onClick="buttonU"
         android:text="FORWARD"
+        app:layout_constraintBottom_toTopOf="@+id/btnDown"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnLeft"
@@ -46,7 +45,6 @@
         android:layout_height="134dp"
         android:layout_marginEnd="6dp"
         android:enabled="false"
-        android:onClick="buttonL"
         android:text="LEFT"
         app:layout_constraintEnd_toStartOf="@+id/btnDown"
         app:layout_constraintTop_toTopOf="@+id/btnDown" />
@@ -55,13 +53,12 @@
         android:id="@+id/btnDown"
         android:layout_width="129dp"
         android:layout_height="134dp"
-        android:layout_marginTop="-2dp"
+        android:layout_marginBottom="32dp"
         android:enabled="false"
-        android:onClick="buttonD"
         android:text="BACKWARD"
+        app:layout_constraintBottom_toTopOf="@+id/barSpeed"
         app:layout_constraintEnd_toEndOf="@+id/btnUp"
-        app:layout_constraintStart_toStartOf="@+id/btnUp"
-        app:layout_constraintTop_toBottomOf="@+id/btnUp" />
+        app:layout_constraintStart_toStartOf="@+id/btnUp" />
 
     <Button
         android:id="@+id/btnRight"
@@ -69,9 +66,20 @@
         android:layout_height="134dp"
         android:layout_marginStart="6dp"
         android:enabled="false"
-        android:onClick="buttonR"
         android:text="RIGHT"
         app:layout_constraintStart_toEndOf="@+id/btnDown"
         app:layout_constraintTop_toTopOf="@+id/btnDown" />
+
+    <SeekBar
+        android:id="@+id/barSpeed"
+        android:layout_width="328dp"
+        android:layout_height="34dp"
+        android:layout_marginBottom="36dp"
+        android:max="100"
+        android:progress="50"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
