--- a/controller/app/src/main/res/layout/activity_main.xml
+++ b/controller/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:id="@+id/turtle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="monospace"
         android:text="@string/turtle"
         app:layout_constraintBottom_toTopOf="@+id/btnUp"
         app:layout_constraintEnd_toEndOf="parent"
